--- a/three-step-funnel/index.html
+++ b/three-step-funnel/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Advertorial Template</title>
-    <meta name="description" content="A professional advertorial template that presents products through editorial-style content" />
+    <title>Three Step Funnel Template</title>
+    <meta name="description" content="A boilerplate three-step funnel template with embedded checkout form" />
   </head>
   <body>
     <div id="root"></div>
